fixed padding for videoon mobile

--- a/css/media-querry.css
+++ b/css/media-querry.css
@@ -211,7 +211,7 @@
 
   .yt-embed{
     width: 100%;
-    padding-top: 1rem;
+    padding: 1rem 1rem 1rem;
   }
 
   .pic-grid-container {
